# Rubiks-Cube-Solver-Cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube1dArray.h  RubiksCube3dArray.cpp  RubiksCube3dArray.h  RubiksCubeBitboard.cpp  RubiksCubeBitboard.h
PatternDatabases/: CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  PatternDatabase.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
